--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -12,9 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Predicting which water pumps are faulty in Tanzania\n",
     "\n",
@@ -30,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -61,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -710,7 +704,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "hidden": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -772,9 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -797,9 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -873,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,8 +875,7 @@
     "    NaNs by mean in each region.\n",
     "    To impute using sub-regions of region_feature, pass region_feature as a list e.g.\n",
     "    \n",
-    "    imputeNaN_by_mean_per_region(df,['lat','long'],['region','district'])\n",
-    "    imputeNaN_by_mean_per_region(df,['age'],'sex')\n",
+    "    imputeNaN_by_mean_per_region(df,['source','height'],['region','sub-district'])\n",
     "\n",
     "    V0.2_2019\"\"\"\n",
     "    df_temp=df.copy()\n",
@@ -985,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,6 +1038,9 @@
     "    X_trainvaltest=imputeNaN_by_mean_per_region(X_trainvaltest,['gps_height','population','construction_year'] ,'cluster10') \n",
     "    X_test = X_trainvaltest[-len(X_test):]\n",
     "    \n",
+    "    if not X_trainvaltest.isnull().any().any(): print(f'All data has been successfuly imputed.')\n",
+    "\n",
+    "    \n",
     "#\n",
     "    print(\"-- Add month of record\")\n",
     "\n",
@@ -1077,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1138,6 +1130,7 @@
       " Warning: [imputeNaN_by_mean_per_['region', 'district_code']] Feature longitude still has some NaNs.\n",
       " Warning: [imputeNaN_by_mean_per_['region', 'district_code']] Feature latitude still has some NaNs.\n",
       "-- Impute ['gps_height','population','construction_year'] using Kmeans-10\n",
+      "Data successfuly imputed.\n",
       "-- Add month of record\n",
       "-- Add operation time\n",
       "-- Encode categorical features\n",
