--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
       " Warning: [imputeNaN_by_mean_per_['region', 'district_code']] Feature longitude still has some NaNs.\n",
       " Warning: [imputeNaN_by_mean_per_['region', 'district_code']] Feature latitude still has some NaNs.\n",
       "-- Impute ['gps_height','population','construction_year'] using Kmeans-10\n",
-      "Data successfuly imputed.\n",
+      "All data has been successfuly imputed.\n",
       "-- Add month of record\n",
       "-- Add operation time\n",
       "-- Encode categorical features\n",
