--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Predicting-which-water-pumps-are-faulty-in-Tanzania\" data-toc-modified-id=\"Predicting-which-water-pumps-are-faulty-in-Tanzania-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Predicting which water pumps are faulty in Tanzania</a></span></li><li><span><a href=\"#Data-processing\" data-toc-modified-id=\"Data-processing-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data processing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Useful-project-independent-functions\" data-toc-modified-id=\"Useful-project-independent-functions-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Useful project-independent functions</a></span></li><li><span><a href=\"#Project-dependent-functions\" data-toc-modified-id=\"Project-dependent-functions-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Project-dependent functions</a></span></li><li><span><a href=\"#Import-all-the-data,-split-it-and-prepare-it\" data-toc-modified-id=\"Import-all-the-data,-split-it-and-prepare-it-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Import all the data, split it and prepare it</a></span></li></ul></li><li><span><a href=\"#ML-modeling\" data-toc-modified-id=\"ML-modeling-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>ML modeling</a></span><ul class=\"toc-item\"><li><span><a href=\"#Model-Selection\" data-toc-modified-id=\"Model-Selection-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Model Selection</a></span></li><li><span><a href=\"#Ensemble-of-LightGBM-models\" data-toc-modified-id=\"Ensemble-of-LightGBM-models-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Ensemble of LightGBM models</a></span></li><li><span><a href=\"#Ensemble-of-XGBoost-+-RandomForest-+-LightGBM\" data-toc-modified-id=\"Ensemble-of-XGBoost-+-RandomForest-+-LightGBM-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Ensemble of XGBoost + RandomForest + LightGBM</a></span></li><li><span><a href=\"#Submisstion\" data-toc-modified-id=\"Submisstion-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Submisstion</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Predicting-which-water-pumps-are-faulty-in-Tanzania\" data-toc-modified-id=\"Predicting-which-water-pumps-are-faulty-in-Tanzania-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Predicting which water pumps are faulty in Tanzania</a></span></li><li><span><a href=\"#Data-processing\" data-toc-modified-id=\"Data-processing-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data processing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Useful-project-independent-functions\" data-toc-modified-id=\"Useful-project-independent-functions-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Useful project-independent functions</a></span></li><li><span><a href=\"#Project-dependent-functions\" data-toc-modified-id=\"Project-dependent-functions-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Project-dependent functions</a></span></li><li><span><a href=\"#Import-all-the-data,-split-it-and-prepare-it\" data-toc-modified-id=\"Import-all-the-data,-split-it-and-prepare-it-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Import all the data, split it and prepare it</a></span></li></ul></li><li><span><a href=\"#ML-modeling\" data-toc-modified-id=\"ML-modeling-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>ML modeling</a></span><ul class=\"toc-item\"><li><span><a href=\"#Model-Selection\" data-toc-modified-id=\"Model-Selection-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Model Selection</a></span></li><li><span><a href=\"#Ensemble-of-LightGBM-models\" data-toc-modified-id=\"Ensemble-of-LightGBM-models-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Ensemble of LightGBM models</a></span></li><li><span><a href=\"#Ensemble-of-XGBoost-+-RandomForest-+-LightGBM\" data-toc-modified-id=\"Ensemble-of-XGBoost-+-RandomForest-+-LightGBM-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Ensemble of XGBoost + RandomForest + LightGBM</a></span></li></ul></li><li><span><a href=\"#Ideas-for-improvement\" data-toc-modified-id=\"Ideas-for-improvement-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Ideas for improvement</a></span></li></ul></div>"
    ]
   },
   {
@@ -1950,9 +1950,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Ensemble of LightGBM models"
    ]
@@ -1961,7 +1959,6 @@
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -2004,9 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gc\n",
@@ -2048,7 +2043,7 @@
     "    y=ytrain\n",
     "    cv_result=0\n",
     "    \n",
-    "    splits=5\n",
+    "    splits=10\n",
     "    \n",
     "    skf = StratifiedKFold(n_splits=splits, shuffle=True, random_state=42)\n",
     "    skf.get_n_splits(Xtrain, ytrain)\n",
@@ -2070,9 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_full =pd.concat([X_train,X_val])\n",
@@ -2085,43 +2078,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./models\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from glob import glob\n",
-    "\n",
-    "print(mdl_path)\n",
-    "glob(mdl_path+'/'+'LGB'+'*')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 209,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
@@ -2184,12 +2142,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "predsens=predictions('LGB',X_test.values) #OR predictions('LGB',X_test)"
+    "mypredictions=predictions('LGB',X_test)"
    ]
   },
   {
@@ -2285,16 +2241,6 @@
     "# Save to file in the current working directory\n",
     "joblib_file = \"ensemble_model_final.pkl\"  \n",
     "joblib.dump(ensemble_clf, joblib_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Submisstion\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -2396,8 +2342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "**Ideas for improvement**:\n",
+    "## Ideas for improvement\n",
     "\n",
     "Although the goal was not to build the most competitive model, I think that with more time tuning the parameters, this model can lead to a higher score. \n",
     "\n",
@@ -2410,6 +2355,13 @@
     "\n",
     "End."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
