--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -2136,12 +2136,18 @@
     "To increase it even further, here are some more ideas to consider:\n",
     "\n",
     "* Build new features such as: distance from big city, non-linear transformation of lat/long coordinates, spatial grid of transformed coordinates.\n",
-    "* Add more variations of the selected models to the ensemble.\n",
-    "* Use more sophisticated stacking to build the ensemble.\n",
+    "* Bin categorical data with large number of categories.\n",
     "\n",
     "\n",
     "End."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
