--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -1519,7 +1519,7 @@
     "\n",
     "As a result, AdaBoost, CatBoost, (Sci-kit's) Gradient Boosting, and K-Neighbor were performing rather poorly (and to the exception of KN they were also much slower) even when considering additional tweaks (like bagging AdaBoost). The final short-list consisted of only the first three classifiers (Random Forest, XGBoost, LightGBM) which offered  good performances at reasonable execution times (of these XGBoost was the best with a slight advantage). I assessed the accuracy of these models on the validation data set and with cross-validation.\n",
     "\n",
-    "After some more focused tuning I considered different ensembles (see below). It turns out that the best performing stack consists of the three models trained on the full data set and  gave the highest public rating; a top 10% score of 0.8168 (best being 0.8286)."
+    "After some more focused tuning I considered different ensembles (see below). It turns out that the best performing stack consists of the three models trained on the full data set and  gave the highest public rating; a  score of 0.8168 (best being 0.8286)."
    ]
   },
   {
