--- a/Tanzania_github.ipynb
+++ b/Tanzania_github.ipynb
@@ -839,13 +839,13 @@
     "\n",
     " * Use information on the pump to impute categorical data related to the maintenance/construction using the most frequent categories. The features `'funder'` and `'installer'` are imputed using the \"region\" `'extraction_type_class'`: `imputeNaN_by_freq_per_region(X_train,['funder','installer'] ,'extraction_type_class')`\n",
     "\n",
-    " * Note on imputing: I have divided the data set into a training and a validation set before pre-processing the data. I start by preprocessing the training data set (this is where the 10 new regions are defined).  For the preprocessing of validation/test data  I use information from the training data set (since this is an information we already had) to impute missing values. This should avoid data leakage and over-fitting. Similarly, once the models are fixed I process the test data using the full data set as a priori knowledge.\n",
+    " * Note on imputations:  I have considered various strategies to deal with missing/null values and treated this as a hyperparameter of the model. To implement imputation I have divided the data set into a training and a validation set before pre-processing the data. I start by preprocessing the training data set (this is where the 10 new regions are defined).  For the preprocessing of validation/test data  I use information from the training data set to impute missing values. This should avoid data leakage and over-fitting. Similarly, once the models are fixed I process the test data using the full data set as a priori knowledge.\n",
     "\n",
     "\n",
     "* I created two more features: `operation_time` (time lapse between the construction year and the record date) and `month` (month when the inspection of the pump took place, to take into account some possible seasonal effect).\n",
     " \n",
     " \n",
-    "* It is worth noting some other features I tried but which didn't lead to significant improvements: among these cluster_400 created 400 fake regions. The spatial features have the highest F1 score, so I tried to improve the algorithms by providing sub-district regions. However this has slowed down the computation without leading to significant improvement. I have also tried 3D clusters using the height parameter, but while the F1 score of these features was high, the overal improvement was not great. Distinguishing local from international funders didn't lead to any improvement either.\n",
+    "* It is worth noting some other features I tried but which didn't lead to significant improvements: among these cluster_400 created 400 fake regions. The spatial features have the highest F1 score, so I tried to improve the algorithms by providing sub-district regions. However this has slowed down the computation without leading to significant improvement. I have also tried 3D clusters using the height parameter, but while the F1 score of these features was high, the overal improvement was not great. Distinguishing local from international funders didn't lead to any improvement either. Limiting the number of some categorical features with large number of categories didn't lead to significant improvements.\n",
     "\n",
     "\n",
     "* Last but not least, I label-encoded the categorical features without binning them. Since I was planning on using tree-based algorithms one-hot encoding was not necessary.\n",
@@ -1046,7 +1046,6 @@
     "    print(\"-- Add operation time\")\n",
     "    Xtrain,Xtest=map(add_operation_time,[Xtrain,Xtest])\n",
     "    Xtrain,Xtest=map(lambda x:x.drop(['cluster10','date_recorded','construction_year','date_construction'], axis=1),[Xtrain,Xtest])\n",
-    "#    Xtrain,Xval,Xtest=map(lambda x:x.drop(['date_recorded','date_construction'], axis=1),[Xtrain,Xval,Xtest])\n",
     "\n",
     "\n",
     "#        \n",
@@ -1055,6 +1054,10 @@
     "    cat_columns =list(Xtrain.select_dtypes(['object']).columns)\n",
     "\n",
     "    Xtraintest=pd.concat([Xtrain,Xtest])\n",
+    "    \n",
+    "    #bin 'funder' categories into smaller number of categories:\n",
+    "    #Xtraintest['funder']=cut_levels(Xtraintest.funder, 500, 'others')\n",
+    "    \n",
     "    Xtraintest[cat_columns] = Xtraintest[cat_columns].apply(lambda col: LabelEncoder().fit_transform(col))\n",
     "        \n",
     "    Xtrain   =Xtraintest[:len(Xtrain)]\n",
@@ -1519,7 +1522,7 @@
     "\n",
     "As a result, AdaBoost, CatBoost, (Sci-kit's) Gradient Boosting, and K-Neighbor were performing rather poorly (and to the exception of KN they were also much slower) even when considering additional tweaks (like bagging AdaBoost). The final short-list consisted of only the first three classifiers (Random Forest, XGBoost, LightGBM) which offered  good performances at reasonable execution times (of these XGBoost was the best with a slight advantage). I assessed the accuracy of these models on the validation data set and with cross-validation.\n",
     "\n",
-    "After some more focused tuning I considered different ensembles (see below). It turns out that the best performing stack consists of the three models trained on the full data set and  gave the highest public rating; a  score of 0.8168 (best being 0.8286)."
+    "After some more focused tuning I considered different ensembles (see below). It turns out that the best performing stack consists of the three models trained on the full data set and  gave the highest public rating; a top 10% score of 0.8168 (best being 0.8286)."
    ]
   },
   {
@@ -2133,11 +2136,7 @@
     "\n",
     "Although the goal was not to build the most competitive model, I think that with more time tuning the parameters, this model can lead to a higher score. \n",
     "\n",
-    "To increase it even further, here are some more ideas to consider:\n",
-    "\n",
-    "* Build new features such as: distance from big city, non-linear transformation of lat/long coordinates, spatial grid of transformed coordinates.\n",
-    "* Bin categorical data with large number of categories.\n",
-    "\n",
+    "To increase it even further, here are some more ideas to consider: Build new features such as: distance from big city, non-linear transformation of lat/long coordinates, spatial grid of transformed coordinates.\n",
     "\n",
     "End."
    ]
